# FindAll

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  THIRD_PARTY_LICENSES.md  agents.md  audit.toml  build.rs  build_errors.txt  build_errors_2.txt  cargo_errors.txt  check_errors.txt  cliff.toml  cog.toml  context-builder.toml  context.md  errors.txt  get_iced_sig.py  index.scip  justfile  lucide_debug.json  package.json  patch_search.py  reorder.py  review_result.json  tauri.conf.json  test_errors.txt  test_errors_2.txt  test_iced.rs  update_scanner.py  update_searcher.py  vite.config.js
.cargo/: config.toml
.context-builder/cache/: state_28452b5193fe9931_24cf071c0fbc60ba.json  state_28452b5193fe9931_e47c52a84ab12d55.json
.desloppify/: config.json  plan.json  plan.json.bak  query.json  review_packet_blind.json  state-rust.json  state-rust.json.bak
.desloppify/external_review_sessions/ext_20260309_172307_d3471b9d/: canonical_import_20260309_173105.json  canonical_import_20260309_173117.json  canonical_import_20260309_173139.json  canonical_import_20260309_173231.json  claude_launch_prompt.md  review_result.template.json  reviewer_instructions.md  session.json
.desloppify/review_packets/: holistic_packet_20260305_081222.json  holistic_packet_20260309_172307.json
.desloppify/subagents/runs/20260305_081222/: run_summary.json
.github/workflows/: ci-cd.yml  nightly.yml
.nextest/: config.toml
benches/: benchmarks.rs  search.rs
docs/: architecture.md  context_20260304155721.md  context_20260304170741.md  context_20260309163756.md  context_20260310081240.md  ocr_integration_guide.md  project_context_20260309061728.md  project_context_20260322065008.md  project_context_20260425130511.md
proptest-regressions/indexer/: query_parser.txt
src/: app.css  app.html  error.rs  export_test.rs  iced_ui.rs  lib.rs  main.rs  models.rs  settings.rs  slint_ui.rs  watcher.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: commands.rs  error.rs  lib.rs  main.rs  settings.rs  slint_ui.rs  watcher.rs
src-tauri/src/commands/: indexing.rs  mod.rs  search.rs  settings.rs  system.rs
src-tauri/src/indexer/: filename_index.rs  mod.rs  query_parser.rs  schema.rs  searcher.rs  writer.rs
src-tauri/src/metadata/: db.rs  mod.rs
src-tauri/src/parsers/: docx.rs  epub.rs  excel.rs  extended.rs  mod.rs  odf.rs  odt.rs  pdf.rs  pptx.rs  text.rs
src-tauri/src/scanner/: mod.rs
src-tauri/ui/: main.slint
src/commands/: autostart.rs  export.rs  indexing.rs  mod.rs  search.rs  settings.rs  system.rs
src/iced_ui/: icons.rs  mod.rs  search.rs  settings.rs  theme.rs
src/indexer/: filename_index.rs  mod.rs  query_parser.rs  schema.rs  searcher.rs  writer.rs
src/lib/: api.ts  state.svelte.ts  types.ts
src/lib/components/: Icon.svelte  PreviewPanel.svelte  QuickLookModal.svelte  SearchTab.svelte  SettingsTab.svelte  ShortcutsModal.svelte  Sidebar.svelte  StatsTab.svelte
src/lib/utils/: fileTypes.ts
src/metadata/: db.rs  mod.rs
src/parsers/: docx.rs  epub.rs  excel.rs  extended.rs  memory_map.rs  mod.rs  odf.rs  pdf.rs  pptx.rs  text.rs
src/routes/: +layout.ts  +page.svelte
src/scanner/: drive_scanner.rs  mod.rs
src/stores/: search.ts
src/system/: context_menu.rs  mod.rs  startup.rs  tray.rs
target_local/: .rustc_info.json
target_local/debug/.fingerprint/adler2-1dacbbff7dc94c85/: lib-adler2  lib-adler2.json
target_local/debug/.fingerprint/aes-5d574e42e2b62d86/: lib-aes  lib-aes.json
target_local/debug/.fingerprint/ahash-78a21b8124db563d/: lib-ahash  lib-ahash.json
target_local/debug/.fingerprint/ahash-b1b714a9680b6644/: build-script-build-script-build  build-script-build-script-build.json
target_local/debug/.fingerprint/ahash-cebcfe36a0f1d75a/: run-build-script-build-script-build  run-build-script-build-script-build.json
target_local/debug/.fingerprint/aho-corasick-81e0796e86d86b59/: lib-aho_corasick  lib-aho_corasick.json
target_local/debug/.fingerprint/aho-corasick-e53979415f7b97c8/: lib-aho_corasick  lib-aho_corasick.json
target_local/debug/.fingerprint/aligned-2e05768ef6c71913/: lib-aligned  lib-aligned.json
target_local/debug/.fingerprint/aligned-vec-f86a687c5426738d/: lib-aligned_vec  lib-aligned_vec.json
target_local/debug/.fingerprint/allocator-api2-07e5ed23aab02f3a/: lib-allocator_api2  lib-allocator_api2.json
target_local/debug/.fingerprint/anyhow-11ad8ede9f4b8b45/: run-build-script-build-script-build  run-build-script-build-script-build.json
target_local/debug/.fingerprint/anyhow-391da6addefe58a6/: lib-anyhow  lib-anyhow.json
target_local/debug/.fingerprint/anyhow-c8f85c9944df2be7/: build-script-build-script-build  build-script-build-script-build.json
target_local/debug/.fingerprint/approx-a750f317395fc351/: lib-approx  lib-approx.json
target_local/debug/.fingerprint/arboard-75328fe0dcae6873/: lib-arboard  lib-arboard.json
target_local/debug/.fingerprint/arc-swap-7578c917eaa77b40/: lib-arc_swap  lib-arc_swap.json
target_local/debug/.fingerprint/arg_enum_proc_macro-e88d857c1bc6fa98/: lib-arg_enum_proc_macro  lib-arg_enum_proc_macro.json
target_local/debug/.fingerprint/arrayref-c9e901bd33a1b2db/: lib-arrayref  lib-arrayref.json
target_local/debug/.fingerprint/arrayvec-3661e6ce48c85cda/: lib-arrayvec  lib-arrayvec.json
target_local/debug/.fingerprint/as-slice-85f5e74ff4511bbb/: lib-as_slice  lib-as_slice.json
target_local/debug/.fingerprint/ash-2e713e716ac4602b/: build-script-build-script-build  build-script-build-script-build.json
target_local/debug/.fingerprint/ash-55a7440ca016281f/: run-build-script-build-script-build  run-build-script-build-script-build.json
target_local/debug/.fingerprint/ash-d3b9f04dbd39e0c8/: lib-ash  lib-ash.json
target_local/debug/.fingerprint/astral-tl-799569b44170ebc9/: lib-tl  lib-tl.json
tests/: integration_test.rs
ui/: globals.slint  main.slint
ui/components/: FilterBar.slint  Icon.slint  ModernLineEdit.slint  PreviewPane.slint  ResultRow.slint  Settings.slint  SidebarButton.slint  StatCard.slint  ThemeToggle.slint
windows/: hooks.nsi  installer.nsi
(+1888 files in other folders)
