[package]
name = "flash-search"
version = "0.2.0"
description = "Ultrafast local text search"
authors = ["Flash Search Team"]
edition = "2021"
rust-version = "1.75"

[lib]
name = "flash_search"

[build-dependencies]
winres = "0.1"

[dependencies]
# UI Framework
iced = { version = "0.13", features = ["image", "svg", "tokio"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Search Engine
tantivy = "0.25"

# Metadata Database (Pure Rust KV store)
redb = "1.5"

# Concurrency & Parallelism
tokio = { version = "1", features = ["full"] }
rayon = "1.8"

# File System
walkdir = "2"
notify = "6.1"
ignore = "0.4"
memmap2 = "0.9"

# Document Parsing
zip = { version = "2.2", default-features = false, features = ["deflate"] }
quick-xml = "0.31"
pdf-extract = "0.7"

# Performance Libraries
moka = { version = "0.12", features = ["sync"] }
phf = { version = "0.11", features = ["macros"] }
memchr = "2.5"
nucleo = "0.2"
nucleo-matcher = "0.2"
compact_str = { version = "0.6", features = ["serde"] }
zerocopy = { version = "0.7", features = ["derive"] }

# Utilities
anyhow = "1.0"
thiserror = "1.0"
blake3 = "1.5"
chrono = { version = "0.4", features = ["serde"] }
bincode = "1.3"
dirs = "5.0"
arboard = "3.4"
regex = "1"
opener = "0.7"
rfd = "0.14"
ctrlc = "3.2"

[target.'cfg(windows)'.dependencies]
winreg = "0.52"

# Performance & Observability
mimalloc = { version = "0.1", default-features = false }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"

# Document Parsing
litchi = { git = "https://github.com/DevExzh/litchi.git", rev = "0f9973bc59afaa9bd34450d6bf45e4a27d487dd5", features = ["odf", "rtf"] }
calamine = "0.24"

[dev-dependencies]
tempfile = "3.0"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = true
panic = "abort"
