[package]
name = "flash-search"
version = "0.2.0"
description = "Ultrafast local text search"
authors = ["Flash Search Team"]
edition = "2021"
rust-version = "1.75"

[lib]
name = "flash_search"

[build-dependencies]
winres = "0.1"

[dependencies]
# UI Framework
iced = { version = "0.14", features = ["image", "svg", "tokio"] }
iced_aw = { version = "0.13", default-features = false, features = ["card"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Search Engine
tantivy = "0.25"

# Metadata Database (Pure Rust KV store)
redb = "2.1"

# Concurrency & Parallelism
tokio = { version = "1", features = ["full"] }
rayon = "1.8"

# File System
walkdir = "2"
notify = "8.2"
ignore = "0.4"
memmap2 = "0.9"

# Document Parsing
zip = { version = "2.4", default-features = false, features = ["deflate"] }
quick-xml = "0.39"
pdfium-render = "0.8"

# Performance Libraries
moka = { version = "0.12", features = ["sync"] }
phf = { version = "0.13", features = ["macros"] }
fst = "0.4"
nucleo-matcher = "0.3"
compact_str = { version = "0.9", features = ["serde"] }
rkyv = { version = "0.8", features = ["bytecheck"] }
sysinfo = "0.38"

# Utilities
anyhow = "1.0"
thiserror = "2.0"
blake3 = "1.5"
chrono = { version = "0.4", features = ["serde"] }
bincode = { version = "2.0.0-rc.3", features = ["serde"] }
dirs = "6.0"
arboard = "3.4"
regex = "1"
opener = { version = "0.8", features = ["reveal"] }
rfd = "0.17"
ctrlc = "3.2"
tray-icon = "0.21"
auto-launch = "0.6"
image = { version = "0.25", default-features = false, features = ["png"] }
global-hotkey = "0.5.0"
fs2 = "0.4"
self_update = { version = "0.41", features = ["rustls"] }

# Performance & Observability
mimalloc = { version = "0.1", default-features = false }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"

# Document Parsing
litchi = { git = "https://github.com/DevExzh/litchi.git", rev = "0f9973bc59afaa9bd34450d6bf45e4a27d487dd5", features = [
    "odf",
    "rtf",
] }
calamine = "0.33"
sevenz-rust = "0.6.1"
unrar = "0.5.8"

[target.'cfg(windows)'.dependencies]
winreg = "0.55"

[dev-dependencies]
tempfile = "3.0"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = true
panic = "abort"
