[package]
name = "flash-search"
version = "0.9.0"
description = "Ultrafast local text search"
authors = ["Flash Search Team"]
edition = "2024"
rust-version = "1.94.1"

[lib]
name = "flash_search"

[build-dependencies]
winres = "0.1"
image = { version = "0.25", default-features = false, features = [
    "png",
    "ico",
] }

[dependencies]
# UI Framework
iced = { version = "0.14", features = ["image", "svg", "tokio", "lazy"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Search Engine
tantivy = "0.25"

# Metadata Database (Pure Rust KV store)
redb = "2.1"

# Concurrency & Parallelism
tokio = { version = "1", features = [
    "rt-multi-thread",
    "sync",
    "time",
    "macros",
] }
rayon = "1.8"
parking_lot = "0.12"
tokio-util = { version = "0.7", features = ["rt"] }

# File System
notify = "8.2"
ignore = "0.4"
memmap2 = "0.9"
fd-lock = "4.0"

# Document Parsing
# Simplified with Kreuzberg
kreuzberg = { version = "4.8.0", features = [
    "tokio-runtime",
    "pdf",
    "ocr",
    "language-detection",
    "keywords-yake",
    "chunking",
    "tree-sitter",
] }


# Performance Libraries
moka = { version = "0.12", features = ["sync"] }
fst = "0.4"
rkyv = { version = "0.8", features = ["bytecheck"] }
sysinfo = "0.38"
compact_str = { version = "0.9", features = ["rkyv", "serde"] }
smallvec = "1.13"
crossbeam-channel = "0.5"
ahash = "0.8"
csv = "1.3"

# Utilities
anyhow = "1.0"
thiserror = "2.0"
blake3 = "1.5"
jiff = { version = "0.1", features = ["serde"] }
dirs = "6.0"
arboard = "3.4"
regex = "1"
opener = { version = "0.8", features = ["reveal"] }
rfd = "0.17"
ctrlc = "3.2"
tray-icon = "0.21"
auto-launch = "0.6"
image = { version = "0.25", default-features = false, features = [
    "png",
    "ico",
] }
global-hotkey = "0.5.0"
self_update = { version = "0.41", features = ["rustls"] }
itertools = "0.13"
strum = { version = "0.26", features = ["derive"] }
config = "0.14"
bon = "3.1"
syntect = "5.2"
arc-swap = "1.6"

# Performance & Observability
mimalloc = { version = "0.1", default-features = false }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"
log-panics = "2.1"

# calamine, sevenz-rust, and unrar are now redundant or handled by Kreuzberg

[target.'cfg(windows)'.dependencies]
winreg = "0.55"
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_Storage_FileSystem",
    "Win32_System_Ioctl",
    "Win32_System_IO",
] }

[dev-dependencies]
tempfile = "3.0"
divan = "0.1"
proptest = "1.5"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(windows)'] }

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
all = { level = "warn", priority = -1 }

[[bench]]
name = "benchmarks"
harness = false

[package.metadata.dist]
# The preferred cargo-dist version to use in CI (Cargo.toml SemVer syntax)
cargo-dist-version = "0.22.1"
# CI backends to support
ci = ["github"]
# The installers to generate for each app
installers = ["powershell", "shell"]
# Target platforms to build apps for (Rust target-triple syntax)
targets = [
    "x86_64-pc-windows-msvc",
    "x86_64-unknown-linux-gnu",
    "aarch64-apple-darwin",
    "x86_64-apple-darwin",
]
# Whether to install an updater binary
install-updater = true

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = true
panic = "abort"
