[package]
name = "flash-search"
version = "0.1.0"
description = "Ultrafast local text search"
authors = ["you"]
edition = "2021"
rust-version = "1.75"

[lib]
name = "flash_search_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# Tauri Framework
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Search Engine
tantivy = "0.22"

# Metadata Database (Pure Rust KV store)
redb = "1.5"

# Concurrency & Parallelism
tokio = { version = "1", features = ["full"] }
rayon = "1.8"

# File System
walkdir = "2"
notify = "6.1"
ignore = "0.4"
memmap2 = "0.9"

# Document Parsing
zip = { version = "0.6", default-features = false, features = ["deflate"] }
quick-xml = "0.31"
pdf-extract = "0.7"

# Utilities
anyhow = "1.0"
thiserror = "1.0"
blake3 = "1.5"
chrono = { version = "0.4", features = ["serde"] }
bincode = "1.3"
dirs = "5.0"
tauri-plugin-dialog = "2"

[dev-dependencies]
tempfile = "3.0"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
panic = "abort"
